# pysdds

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  pyproject.toml.new  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yaml
.gitlab/: conda.yml  environment311.yml  environment38.yml
conda/: meta.yaml
demos/: read_sdds.ipynb  write_sdds.ipynb  write_streaming_sdds.ipynb
pysdds/: __init__.py  _version.py
pysdds/readers/: __init__.py  readers.py  shlex_sdds.py  tokenizers.py
pysdds/structures/: __init__.py  structures.py
pysdds/util/: constants.py  conversions.py  errors.py  io.py
pysdds/util/gorilla/: gorilla.py
pysdds/writers/: __init__.py  writers.py
tests/: benchmark.ipynb  run_all.py  test_readers.py  test_readers_indexing.py  test_writers.py
tests/files/: byte_parsing_debug.ipynb  example_all_types.sdds
tests/files/sources/: BTSdiag.sdds  CATBeamlineWater.mon  FPGA-S1A.slowHistory.sdds  FPGA-S40B.AP3.slowHistory.x.fft  L3_QM1.excitation.proc  LPL2021-254-0911-004435  PRF1.mon  SRBunchPurityWaveform.mon  dumpTimeStamps.snap  injMonConfig2.sdds  log-2021-05.0004  log-2021-05.0005  log-2021-05.0006  opal.stat  opal_mod.stat  parRFWF.mon  ring-40mkm.erl  run.cen.to_remove  run.erl  run.mag  run_amplif2.cof  run_chromCorr3.erl  run_csbend.fin  run_csbend3.out  run_dynAp2.abnd  run_dynAp2.asrch  run_latticeErrors5.ssl  run_names1.mag  run_rfmode5.h12  synth1.sdds  synthetic3.sdds  timeSeries.config-0460  twiss_binary  water.mon  xLinac.matrix
tests/files/sources_compressed/: FPGA-S1A.slowHistory.sdds.xz  FPGA-S1A.slowHistoryORIG.sdds.xz  FPGA-S40B%3AP3.slowHistory.x.fft.xz  dumpTimeStamps.snap.xz  dumpTimeStampsSDDS1.snap.xz  log-2018-08.xz  log-2021-10.xz  tds3000_rf.sdds.xz  timeSeries.sdds.xz
