[build-system]
requires = ["setuptools>=60",
            "tomli; python_version < '3.11'",
            "setuptools_scm>=8.0"
]
build-backend = "setuptools.build_meta"


[project]
name = 'pysdds'
description = 'Package to read and write SDDS files'
authors = [
    {name = "Nikita Kuklev"}
]
readme = "README.md"
license = "MIT"
requires-python = '>=3.9'
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]
dependencies = [
    'numpy>=1.13.3',
    'pandas>=1.0'
]
dynamic = ['version']


[project.urls]
"Homepage" = "https://github.com/nikitakuklev/pysdds"


[tool.setuptools_scm]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E741", # ambiguous variable name
]


[tool.setuptools.packages.find]
where = ["."]
include = ['pysdds*']
